[package]
name = "smash_utils"
version = "0.1.0"
authors = ["VinegarChicken"]
edition = "2018"

[lib]
name = "smash_utils"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
bitflags = "1.3.2"

